--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <title>Survive at all costs</title>
 </head>
 <body>
-    <section class="main">
-        <header>
-            <div class="header">
-                <div class="logo">
-                    <a href="#">
-                        <img src="assets/img/logo.png" alt="logo" width="55" height="55">
-                    </a>
-                </div>
-                <div class="links">
-                    <a href="#" class="link">Main</a>
-                    <a href="#" class="link">About</a>
-                    <a href="#" class="link">Game features</a>
-                    <a href="#" class="link">System requirements</a>
-                    <a href="#" class="link">Quotes</a>
-                </div>
+    <header>
+        <div class="header">
+            <div class="logo">
+                <a href="#">
+                    <img src="assets/img/logo.png" alt="logo" width="55" height="55">
+                </a>
+            </div>
+            <div class="links">
+                <a href="#" class="link">Main</a>
+                <a href="#" class="link">About</a>
+                <a href="#" class="link">Game features</a>
+                <a href="#" class="link">System requirements</a>
+                <a href="#" class="link">Quotes</a>
+            </div>
+            <div class="header-wrapper">
                 <div class="languages">
                     <select>
                         <option>Eng</option>
@@ -47,9 +47,18 @@
                     <span></span>
                     <span></span>
                 </div>
+                <div class="links-mobile">
+                    <a href="#" class="link">Main</a>
+                    <a href="#" class="link">About</a>
+                    <a href="#" class="link">Game features</a>
+                    <a href="#" class="link">System requirements</a>
+                    <a href="#" class="link">Quotes</a>
+                </div>
             </div>
-        </header>
+        </div>
+    </header>
 
+    <section class="main">
         <h1>SURVIVE AT ALL COSTS</h1>
         <h3>Experience new social battle royale game</h3>
         <button class="buy-on-steam">
