--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 </a>
             </div>
             <div class="links">
-                <a href="#" class="link">Main</a>
-                <a href="#" class="link">About</a>
-                <a href="#" class="link">Game features</a>
-                <a href="#" class="link">System requirements</a>
-                <a href="#" class="link">Quotes</a>
+                <a href="#" class="link link_active">Main</a>
+                <a href="#" class="link link_active">About</a>
+                <a href="#" class="link link_active">Game features</a>
+                <a href="#" class="link link_active">System requirements</a>
+                <a href="#" class="link link_active">Quotes</a>
             </div>
             <div class="header-wrapper">
                 <div class="languages">
@@ -46,13 +46,6 @@
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
-                <div class="links-mobile">
-                    <a href="#" class="link">Main</a>
-                    <a href="#" class="link">About</a>
-                    <a href="#" class="link">Game features</a>
-                    <a href="#" class="link">System requirements</a>
-                    <a href="#" class="link">Quotes</a>
                 </div>
             </div>
         </div>
